started building UI for rock paper scissors game.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <span> ROCK </span><span> PAPER </span><span> SCISSORS</span>
+        </h1> 
+    </header>
+    <div class="content">
+        <div class="score">
+            <div class="playerScore">
+                <h2>
+                    0
+                </h2>
+            </div>
+            <div class="computerScore">
+                <h2>
+                    0
+                </h2>
+            </div>
+        </div>
+    </div>
+    <div class="buttons">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
 </body>
 </html>
