--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </h2>
             </div>
         </div>
+        <h1 class="line">|</h1>
     </div>
     <div class="buttons">
         <button>Rock</button>
