got the button events working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -30,9 +30,9 @@
         <h1 class="line">|</h1>
     </div>
     <div class="buttons">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button data-selection="rock">Rock</button>
+        <button data-selection="paper">Paper</button>
+        <button data-selection="scissors">Scissors</button>
     </div>
 </body>
 </html>
