--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
 </head>
 <body>
     <header>
-        <h1>
+        <h1 class="title">
             <span> ROCK </span><span> PAPER </span><span> SCISSORS</span>
         </h1> 
     </header>
     <div class="content">
-        <div class="score">
-            <div class="playerScore">
-                <h2>
-                    0
-                </h2>
-            </div>
-            <div class="computerScore">
-                <h2>
-                    0
-                </h2>
-            </div>
+        <div class="scoreContainer">
+            <h2 class="scoreTitle">Player</h2>
+            <h2 class="playerScore">0</h2>
         </div>
-        <h1 class="line">|</h1>
+        <h1 class="line"></h1>
+        <div class="scoreContainer">
+            <h2 class="scoreTitle">Computer</h2>
+            <h2 class="computerScore">0</h2>
+        </div>
     </div>
     <div class="buttons">
         <button data-selection="rock">Rock</button>
